# u-note

./: .codio  .gitignore  README.md  index.html  package.json  tsconfig.json
.github/workflows/: main.yml
public/: index.html  manifest.json
src/: App.tsx  index.tsx  main.tsx  theme.ts  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Editor.tsx  FileEditor.tsx  FileItem.tsx  FileOrfolder.tsx  InfoBar.tsx  Separator.tsx  SideBar.tsx  TextEditor.tsx  TopBar.tsx
src/components/DraggableList/: Element.tsx  List.tsx  index.tsx
src/components/ui/: Icon.tsx  Layout.tsx  Menu.tsx  ScrollArea.tsx  Spacer.tsx  Tooltip.tsx
src/hooks/: appStore.ts  store.ts  useDirectoryConfig.ts  useDirectoryWatch.ts  useFs.ts
src/libs/: parseIni.ts
src/styles/: quill.css
