[package]
name = "codio"
version = "0.1.0"
description = "Fast text editor"
authors = ["lynx"]
license = "MIT"
repository = ""
default-run = "codio"
edition = "2021"
rust-version = "1.61"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.8", features = [] }


[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.10", features = ["api-all"] }
crossbeam-channel = "0.5.4"
notify = "4.0.17"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
