[package]
name = "codio"
version = "0.1.0"
description = "Fast text editor"
authors = ["lynx"]
license = "MIT"
rust-version = "1.61.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.8", features = [] }


[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.9", features = ["api-all"] }
crossbeam-channel = "0.5.4"
notify = { version = "5.0.0-pre.15", features = ["serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
