[package]
name = "unote"
version = "1.1.0"
description = "Fast and easy text editor"
authors = ["lynx"]
license = "MIT"
rust-version = "1.61.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.8", features = [] }


[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.11", features = ["api-all"] }
crossbeam-channel = "0.5.4"
notify = { version = "5.0.0-pre.15", features = ["serde"] }
async-recursion = "1.0.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
